// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldRadio 1`] = `
.c7 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
}

.c5 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c5 input[type='radio'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c5 .c6 {
  background: #FFFFFF;
}

.c5 input[type='radio']:checked + .c6 {
  background: #0087e1;
  border-color: #0087e1;
}

.c5 input[type='radio']:checked + .c6::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c5 input[type='radio']:focus + .c6 {
  box-shadow: 0 0 .5px 1px #C1C6CC;
}

.c5 input[type='radio']:disabled + .c6 {
  opacity: 0.5;
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c4 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c3 {
  color: #262D33;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.875rem;
  display: inline-block;
}

.c1 .c2 {
  text-align: left;
  width: 20%;
  margin-right: 0;
  margin-left: 0.5rem;
}

<div
  className="c0 c1 "
>
  <label
    className="c2 c3"
    color="palette.charcoal800"
    fontSize="small"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
  >
    👍
  </label>
  <div
    className="c4"
  >
    <div
      className=""
    >
      <div
        className="c5 "
      >
        <input
          className=""
          id="thumbs-up"
          name="thumbsUp"
          type="radio"
        />
        <div
          className="c6 c7"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`A FieldRadio checked 1`] = `
.c7 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
}

.c5 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c5 input[type='radio'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c5 .c6 {
  background: #FFFFFF;
}

.c5 input[type='radio']:checked + .c6 {
  background: #0087e1;
  border-color: #0087e1;
}

.c5 input[type='radio']:checked + .c6::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c5 input[type='radio']:focus + .c6 {
  box-shadow: 0 0 .5px 1px #C1C6CC;
}

.c5 input[type='radio']:disabled + .c6 {
  opacity: 0.5;
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c4 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c3 {
  color: #262D33;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.875rem;
  display: inline-block;
}

.c1 .c2 {
  text-align: left;
  width: 20%;
  margin-right: 0;
  margin-left: 0.5rem;
}

.c8 .c2 {
  text-align: right;
  width: 20%;
}

<div
  className="c0 c1 "
>
  <label
    className="c2 c3"
    color="palette.charcoal800"
    fontSize="small"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
  >
    👍
  </label>
  <div
    className="c4"
  >
    <div
      className=""
    >
      <div
        className="c5 "
      >
        <input
          checked={true}
          className=""
          id="thumbs-up"
          name="thumbsUp"
          type="radio"
        />
        <div
          className="c6 c7"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`A FieldRadio with label aligned left 1`] = `
.c6 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 50%;
  color: transparent;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear, box-shadow 25ms linear;
}

.c4 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c4 input[type='radio'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c4 .c5 {
  background: #FFFFFF;
}

.c4 input[type='radio']:checked + .c5 {
  background: #0087e1;
  border-color: #0087e1;
}

.c4 input[type='radio']:checked + .c5::after {
  content: '';
  position: absolute;
  background: #fff;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  top: calc(50% - 3px);
  right: calc(50% - 3px);
}

.c4 input[type='radio']:focus + .c5 {
  box-shadow: 0 0 .5px 1px #C1C6CC;
}

.c4 input[type='radio']:disabled + .c5 {
  opacity: 0.5;
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c3 {
  color: #262D33;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.875rem;
  display: inline-block;
}

.c7 .c2 {
  text-align: left;
  width: 20%;
  margin-right: 0;
  margin-left: 0.5rem;
}

.c1 .c2 {
  text-align: right;
  width: 20%;
}

<div
  className="c0 c1 "
>
  <label
    className="c2 c3"
    color="palette.charcoal800"
    fontSize="small"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
  >
    👍
  </label>
  <div
    className="c0"
  >
    <div
      className=""
    >
      <div
        className="c4 "
      >
        <input
          className=""
          id="thumbs-up"
          name="thumbsUp"
          type="radio"
        />
        <div
          className="c5 c6"
        />
      </div>
    </div>
  </div>
</div>
`;
